pod-security-vpol/baseline/disallow-proc-mount/.kyverno-test-exceptions/exception-resources.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-partial, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {procMount: Unmasked}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-wrong, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {procMount: Invalid}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-sibling, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {procMount: Unmasked}}, {name: other, image: nginx:1.27, securityContext: {procMount: Invalid}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-whole, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {procMount: Invalid}}]}
